docs/deploy/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hotels
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: hotels
    spec:
      containers:
      - name: hotels
        image: smarthotel220/hotels:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bookings
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: bookings
    spec:
      containers:
      - name: bookings
        image: smarthotel220/bookings:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: suggestions
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: suggestions
    spec:
      containers:
      - name: suggestions
        image: smarthotel220/suggestions:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: config
    spec:
      containers:
      - name: config
        image: smarthotel220/configuration:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: customcfg
          mountPath: /app/cfg/custom.json
          subPath: custom.json
      volumes:
      - name: customcfg
        configMap:
          name: discovery-file
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tasks
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: tasks
    spec:
      containers:
      - name: tasks
        image: smarthotel220/tasks:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notifications
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: notifications
    spec:
      containers:
      - name: notifications
        image: smarthotel220/notifications:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: reviews
    spec:
      containers:
      - name: reviews
        image: smarthotel220/reviews:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discounts
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: discounts
    spec:
      containers:
      - name: discounts
        image: smarthotel220/discounts:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: profiles
spec:
  paused: true
  template:
    metadata:
      labels:
        app: smarthotel220
        component: profiles
    spec:
      containers:
      - name: profiles
        image: smarthotel220/profiles:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 80      
      imagePullSecrets:
      - name: registry-key
