docs/deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: hotels
  name: hotels
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: hotels
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: bookings
  name: bookings
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: bookings
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: suggestions
  name: suggestions
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: suggestions
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: config
  name: config
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: config    
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: tasks
  name: tasks
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: smarthotel220
    component: tasks
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: notifications
  name: notifications
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: notifications    
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: reviews
  name: reviews
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: smarthotel220
    component: reviews
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: discounts
  name: discounts
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: discounts  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smarthotel220
    component: profiles
  name: profiles
spec:
  ports:
  - port: 80
  selector:
    app: smarthotel220
    component: profiles
