docs/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sh220
    component: frontend
  name: sh220-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/ssl-redirect: "false"  
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts: 
    - smarthotel220-apis.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: smarthotel220-apis.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-helloworld
          servicePort: 80
      - path: /hotels-api
        backend:
          serviceName: hotels
          servicePort: 80
      - path: /bookings-api
        backend:
          serviceName: bookings
          servicePort: 80
      - path: /suggestions-api
        backend:
          serviceName: suggestions
          servicePort: 80
      - path: /configuration-api 
        backend:
          serviceName: config
          servicePort: 80          
      - path: /tasks-api
        backend:
          serviceName: tasks
          servicePort: 80
      - path: /notifications-api
        backend:
          serviceName: notifications
          servicePort: 80          
      - path: /reviews-api
        backend:
          serviceName: reviews
          servicePort: 80
      - path: /discounts-api
        backend:
          serviceName: discounts
          servicePort: 80
      - path: /profiles-api
        backend:
          serviceName: profiles
          servicePort: 80
